--- a/wp-content/themes/zts-india/resources/scss/base/_typography.scss
+++ b/wp-content/themes/zts-india/resources/scss/base/_typography.scss
@@ -21,6 +21,9 @@ h1 {
     @include breakpoint(small) {
         font-size: 38px;
     }
+    @media screen and (max-width: 299px) {
+        font-size: 36px;
+    }
 }
 h2 {
     font-size: 48px;
@@ -30,6 +33,9 @@ h2 {
     }
     @include breakpoint(small) {
         font-size: 30px;
+    }
+    @media screen and (max-width: 299px) {
+        font-size: 26px;
     }
 }
 h3 {
