--- a/wp-content/themes/zts-india/resources/scss/pages/_contact.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_contact.scss
@@ -1,6 +1,24 @@
 .section-page-contact {
+    .row {
+        .col-lg-7 {
+            @include breakpoint(medium) {
+                order: 2;
+            }
+        }
+        .col-lg-5 {
+            @include breakpoint(medium) {
+                order: 1;
+            }
+        }
+    }
     .contact-wrapper {
+        @include breakpoint(medium) {
+            padding-top: 40px;
+        }
         .section-title {
+            @include breakpoint(medium) {
+                margin-left: 0;
+            }
             p {
                 font-weight: 400;
             }
@@ -29,6 +47,9 @@
     }
     .contact-right {
         padding-left: 15%;
+        @include breakpoint(wide) {
+            padding-left: 0;
+        }
         .info-inner {
             padding: 45px 40px;
             padding-right: 70px;
@@ -36,6 +57,12 @@
             box-shadow: 0px 10px 50px 0px rgba(1, 11, 60, 0.1);
             position: relative;
             z-index: 1;
+            @include breakpoint(medium) {
+                padding-right: 40px;
+            }
+            @include breakpoint(small) {
+                padding: 30px 20px
+            }
             .contact-info {
                 &.usa {
                     margin-top: 50px;
