--- a/wp-content/themes/zts-india/resources/scss/pages/_services.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_services.scss
@@ -21,6 +21,10 @@
         position: relative;
         z-index: 1;
 
+        @include breakpoint(small) {
+            min-height: 300px;
+        }
+
         h1 {
             color: $white;
             margin: 0 0 25px;
@@ -47,6 +51,10 @@
 
                     &:last-child {
                         opacity: 0.6;
+
+                        @include breakpoint(wide) {
+                            // opacity: 0.8;
+                        }
 
                         &:after {
                             content: none;
@@ -130,12 +138,14 @@
 
 .service-cat-section {
     padding: 80px 0;
+
     @include breakpoint(medium) {
         padding: 80px 0 40px;
     }
+
     @include breakpoint(small) {
-		padding: 60px 0 40px;
-	}
+        padding: 60px 0 40px;
+    }
 
     .service-cat-wrap {
 
@@ -247,15 +257,35 @@
             padding: 40px 50px;
             background: #f7f7f7;
 
+            @include breakpoint(medium) {
+                padding: 40px 30px;
+            }
+
+            @include breakpoint(small) {
+                padding: 30px 20px;
+            }
+
             &:not(:last-child) {
                 margin: 0 0 30px;
             }
 
             .category-image {
-                text-align: center;
-                padding: 30px;
-                background: $white;
-                box-shadow: $default_shadow;
+                @media screen and (min-width: 992px) {
+                    text-align: center;
+                    padding: 30px;
+                    background: $white;
+                    box-shadow: $default_shadow;
+                }
+
+                @include breakpoint(medium) {
+                    width: 80px;
+                    margin: 0 0 30px;
+                }
+
+                @include breakpoint(smaller) {
+                    width: 60px;
+                    margin: 0 0 20px;
+                }
 
                 a {
                     display: block;
@@ -304,10 +334,18 @@
                         margin: 0 -15px;
 
                         li {
-                            margin: 0 0 13px;
                             padding: 0 15px;
                             flex: 0 0 50%;
                             max-width: 50%;
+
+                            &:not(:last-child) {
+                                margin: 0 0 13px;
+                            }
+
+                            @include breakpoint(smaller) {
+                                flex: 0 0 100%;
+                                max-width: 100%;
+                            }
 
                             &:last-child {
                                 margin-right: 0;
@@ -345,54 +383,119 @@
 
 .service-cat-banner {
     padding: 100px 0 60px;
+
+    @include breakpoint(medium) {
+        padding: 80px 0 60px;
+    }
+
+    @include breakpoint(small) {
+        padding: 60px 0;
+    }
+
     .container-fluid {
-        padding: 0 30px;
+        @media screen and (min-width: 1200px) {
+            padding: 0 30px;
+        }
+
         @media screen and (min-width: 1921px) {
             max-width: 1270px;
             padding: 0 15px;
         }
     }
+
     .banner-wrap {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
+        @include breakpoint(medium) {
+            display: block;
+        }
+
         .banner-content {
             max-width: 840px;
+
+            @include breakpoint(wide) {
+                max-width: 55%;
+            }
+
+            @include breakpoint(medium) {
+                max-width: 100%;
+            }
+
             h1 {
                 margin: 0 0 20px;
             }
-    
+
             .content-inner {
                 display: flex;
-                align-items: center;                
+                align-items: center;
+
                 h3 {
                     padding-right: 30px;
                     font-weight: 400;
                     color: #222222;
+
+                    @include breakpoint(smaller) {
+                        font-size: 20px;
+                    }
                 }
-    
+
                 img {
                     width: 150px;
                 }
             }
+
             .button-wrap {
                 padding: 35px 0 0;
+
                 .btn {
+                    @include breakpoint(smaller) {
+                        width: 100%;
+                    }
+
                     &:not(:last-child) {
                         margin-right: 15px;
+
+                        @include breakpoint(extrasmall) {
+                            margin: 0 0 10px;
+                        }
                     }
                 }
             }
         }
+
         .service-thumbnail {
             max-width: calc(100% - 840px);
+
+            @include breakpoint(wide) {
+                max-width: 45%;
+            }
+
+            @include breakpoint(medium) {
+                max-width: 100%;
+            }
+
             img {
                 width: 80%;
                 margin: 0 auto;
                 display: block;
+
+                @include breakpoint(wide) {
+                    width: 100%;
+                    padding-left: 30px;
+                }
+
+                @include breakpoint(medium) {
+                    width: 80%;
+                    padding: 30px 0 0;
+                }
+
+                @include breakpoint(smaller) {
+                    width: 100%;
+                }
             }
         }
-    }    
+    }
 }
 
 .services-section-two {
@@ -402,9 +505,22 @@
     .row {
         margin: 0 -30px;
 
+        @include breakpoint(wide) {
+            margin: 0 -15px;
+        }
+        @include breakpoint(medium) {
+            justify-content: unset !important;
+        }
+
         .col-lg-4 {
-            margin: 0 0 50px;
             padding: 0 30px;
+            &:not(:last-child) {
+                margin: 0 0 50px;
+            }
+
+            @include breakpoint(wide) {
+                padding: 0 15px;
+            }
         }
     }
 }
@@ -418,12 +534,17 @@
 
     .row {
         .col-lg-6 {
-            margin: 0 0 30px;
+            &:not(:last-child) {
+                margin: 0 0 30px;
+            }
         }
     }
 
     .content-block {
         padding: 0 45px 0 0;
+        @include breakpoint(small) {
+            padding: 0;
+        }
 
         .content-title {
             margin: 0 0 10px;
@@ -433,13 +554,16 @@
                 flex-wrap: wrap;
                 align-items: center;
                 font-weight: 700;
-                margin: 0;
+                margin: 0;                
 
                 img,
                 svg {
                     width: 45px;
                     height: 45px;
                     margin-right: 15px;
+                    @media screen and (max-width: 330px) {
+                        // margin: 0 0 20px;
+                    }
 
                     path {
                         fill: $navy_blue;
@@ -468,17 +592,23 @@
     .zig-zac-wrapper {
         .row {
             &:not(:last-child) {
-                margin: 0 0 45px;
+                margin: 0 -15px 45px;
             }
 
             &:nth-child(even) {
                 .col-lg-6 {
                     &:first-child {
                         order: 2;
+                        @include breakpoint(medium) {
+                            order: 1;
+                        }
                     }
 
                     &:last-child {
                         order: 1;
+                        @include breakpoint(medium) {
+                            order: 2;
+                        }
                     }
                 }
             }
@@ -501,6 +631,10 @@
         }
 
         .content-block {
+            @include breakpoint(medium) {
+                margin-top: 30px;
+            }
+
             .content-inner {
                 h3 {
                     margin: 0 0 20px;
@@ -514,8 +648,16 @@
                     padding-top: 15px;
 
                     .btn {
+                        @include breakpoint(small) {
+                            width: 100%;
+                        }
+
                         &:not(:last-child) {
                             margin-right: 10px;
+
+                            @include breakpoint(small) {
+                                margin: 0 0 10px;
+                            }
                         }
                     }
                 }
@@ -529,10 +671,14 @@
         .row {
             display: flex;
             align-items: center;
+
             .content-block {
                 .content-inner {
                     width: 80%;
                     margin-left: auto;
+                    @include breakpoint(wide) {
+                    width: 100%;
+                    }
 
                     h5 {
                         color: $red;
@@ -564,6 +710,7 @@
 
             .logo-block {
                 padding: 0 10px;
+                text-align: center;
 
                 .block-inner {
                     display: inline-flex;
@@ -638,6 +785,20 @@
 
 .faq-list-section {
     background: linear-gradient(to top, rgba($grey, 0.1) 70%, transparent 100%);
+
+    .faq-accordion {
+        .row {
+            @include breakpoint(medium) {
+                margin: 0 -8px;
+            }
+
+            .col-md-6 {
+                @include breakpoint(medium) {
+                    padding: 0 8px;
+                }
+            }
+        }
+    }
 }
 
 .faq-list {
@@ -648,6 +809,10 @@
     box-shadow: 0 8px 24px rgba(86, 103, 255, 0.1);
     @include transition(0.4s);
     padding: 17px 0 15px 24px;
+    background: $white;
+    @include breakpoint(small) {
+        padding: 12px 0 12px 15px;
+    }
 
     button {
         color: #130056;
@@ -660,6 +825,9 @@
         font-weight: 500;
         border: 0;
         background: transparent;
+        @include breakpoint(small) {
+            padding: 0 30px 0 0;
+        }
 
         &:after {
             content: "";
@@ -672,6 +840,9 @@
             background-repeat: no-repeat;
             background-size: contain;
             @include transition(0.4s);
+            @include breakpoint(small) {
+                right: 15px;
+            }
         }
     }
 
@@ -706,22 +877,22 @@ body {
         .portfolio-section {
             background: rgba($grey, 0.1);
 
-                .portfolio-wrapper {
-                    .row {
-                        display: flex;
+            .portfolio-wrapper {
+                .row {
+                    display: flex;
 
-                        &:nth-child(even) {
-                            .col-lg-6 {
-                                &:first-child {
-                                    order: 1 !important;
-                                }
+                    &:nth-child(even) {
+                        .col-lg-6 {
+                            &:first-child {
+                                order: 1 !important;
+                            }
 
-                                &:last-child {
-                                    order: 2 !important;
-                                }
+                            &:last-child {
+                                order: 2 !important;
                             }
                         }
                     }
+                }
 
                 .slick-arrow {
                     position: absolute;
@@ -740,12 +911,62 @@ body {
 
                     &.slick-prev {
                         left: -60px;
+
+                        @media screen and (max-width: 1299px) {
+                            left: -45px;
+                        }
                     }
 
                     &.slick-next {
                         transform: translateY(-50%) rotate(-90deg);
                         right: -60px;
+
+                        @media screen and (max-width: 1299px) {
+                            right: -45px;
+                        }
                     }
+                }
+
+                .slick-dots {
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+                    transform: translateX(-50%);
+
+                    li {
+                        display: inline-block;
+                        margin: 0 0 0 10px;
+
+                        button {
+                            width: 10px;
+                            height: 10px;
+                            background-color: rgba(30, 30, 34, 0.2);
+                            border: 2px solid;
+                            border-color: transparent;
+                            transition: all 500ms ease;
+                            opacity: 1;
+                            margin: 0;
+                            display: block;
+                            font-size: 0;
+                            border-radius: 50%;
+                            padding: 0;
+                        }
+
+                        &.slick-active {
+                            button {
+                                background-color: transparent;
+                                border-color: $red;
+                            }
+                        }
+                    }
+                }
+            }
+            .slick-list {
+                @include breakpoint(medium) {
+                    margin: 0 -15px;
+                }
+                .row {
+                    padding: 0 15px;
                 }
             }
         }
