--- a/wp-content/themes/zts-india/resources/scss/components/_header.scss
+++ b/wp-content/themes/zts-india/resources/scss/components/_header.scss
@@ -153,7 +153,7 @@
 			flex: 0 0 calc(100% - 280px);
 			max-width: calc(100% - 280px);
 			display: flex;
-			justify-content: center;
+			justify-content: flex-end;
 			align-items: center;
 
 			@include breakpoint(wide) {
@@ -175,9 +175,10 @@
 				align-items: center;
 				justify-content: flex-end;
 			}
-
+			
 			ul {
-				display: flex;
+				display: none;
+				// display: flex;
 				flex-wrap: wrap;
 				align-items: center;
 				@include breakpoint(medium) {
